src/parser/parser.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: NEWLINE
    4     | stmt NEWLINE
    5     | error NEWLINE

    6 stmt: simple_stmt

    7 simple_stmt: var ASSIGN arith_expr

    8 var: ID

    9 arith_expr: term ADD term
   10           | term SUB term
   11           | term

   12 term: factor MULT factor
   13     | factor DIV factor
   14     | factor

   15 factor: INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5
    ADD <op> (258) 9
    SUB <op> (259) 10
    MULT <op> (260) 12
    DIV <op> (261) 13
    ASSIGN <op> (262) 7
    INTEGER <int_value> (263) 15
    ID <var> (264) 8
    NEWLINE (265) 3 4 5


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    input (12)
        on left: 1 2
        on right: 0 2
    line (13)
        on left: 3 4 5
        on right: 2
    stmt <expression> (14)
        on left: 6
        on right: 4
    simple_stmt <expression> (15)
        on left: 7
        on right: 6
    var <expression> (16)
        on left: 8
        on right: 7
    arith_expr <expression> (17)
        on left: 9 10 11
        on right: 7
    term <expression> (18)
        on left: 12 13 14
        on right: 9 10 11
    factor <expression> (19)
        on left: 15
        on right: 12 13 14


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end     shift, and go to state 2
    error    shift, and go to state 3
    ID       shift, and go to state 4
    NEWLINE  shift, and go to state 5

    line         go to state 6
    stmt         go to state 7
    simple_stmt  go to state 8
    var          go to state 9


State 2

    0 $accept: input $end .

    $default  accept


State 3

    5 line: error . NEWLINE

    NEWLINE  shift, and go to state 10


State 4

    8 var: ID .

    $default  reduce using rule 8 (var)


State 5

    3 line: NEWLINE .

    $default  reduce using rule 3 (line)


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: stmt . NEWLINE

    NEWLINE  shift, and go to state 11


State 8

    6 stmt: simple_stmt .

    $default  reduce using rule 6 (stmt)


State 9

    7 simple_stmt: var . ASSIGN arith_expr

    ASSIGN  shift, and go to state 12


State 10

    5 line: error NEWLINE .

    $default  reduce using rule 5 (line)


State 11

    4 line: stmt NEWLINE .

    $default  reduce using rule 4 (line)


State 12

    7 simple_stmt: var ASSIGN . arith_expr

    INTEGER  shift, and go to state 13

    arith_expr  go to state 14
    term        go to state 15
    factor      go to state 16


State 13

   15 factor: INTEGER .

    $default  reduce using rule 15 (factor)


State 14

    7 simple_stmt: var ASSIGN arith_expr .

    $default  reduce using rule 7 (simple_stmt)


State 15

    9 arith_expr: term . ADD term
   10           | term . SUB term
   11           | term .

    ADD  shift, and go to state 17
    SUB  shift, and go to state 18

    $default  reduce using rule 11 (arith_expr)


State 16

   12 term: factor . MULT factor
   13     | factor . DIV factor
   14     | factor .

    MULT  shift, and go to state 19
    DIV   shift, and go to state 20

    $default  reduce using rule 14 (term)


State 17

    9 arith_expr: term ADD . term

    INTEGER  shift, and go to state 13

    term    go to state 21
    factor  go to state 16


State 18

   10 arith_expr: term SUB . term

    INTEGER  shift, and go to state 13

    term    go to state 22
    factor  go to state 16


State 19

   12 term: factor MULT . factor

    INTEGER  shift, and go to state 13

    factor  go to state 23


State 20

   13 term: factor DIV . factor

    INTEGER  shift, and go to state 13

    factor  go to state 24


State 21

    9 arith_expr: term ADD term .

    $default  reduce using rule 9 (arith_expr)


State 22

   10 arith_expr: term SUB term .

    $default  reduce using rule 10 (arith_expr)


State 23

   12 term: factor MULT factor .

    $default  reduce using rule 12 (term)


State 24

   13 term: factor DIV factor .

    $default  reduce using rule 13 (term)
